feature request 43 (#161)
- ***Breaking changes***: requires `Glow Worm Luciferin` firmware (v5.13.2).   
- **To make room for the new features Luciferin Full firmware has dropped support for 1 MB devices** like the old ESP8266 Lite or ESP-01. Standard ESP8266 4MB is still obviously supported and it will for a long time.  
**All people running Luciferin Full firmware on an ESP8266 must manually reinstall and reconfigure the Glow Worm firmware** as the ESP8266 will be "formatted" to allow the use of the new 4MB file system. Please use the [Web Installer](https://sblantipodi.github.io/glow_worm_luciferin/) for the purpose, you may need to reconfigure, WiFi, GPIO, device name and baudrate. If for some reason you can't use the [Web Installer](https://sblantipodi.github.io/glow_worm_luciferin/), you can reconfigure your ESP8266 using the [alternative method](https://github.com/sblantipodi/firefly_luciferin/wiki/WiFi-and-MQTT-configuration-using-the-Luciferin-Access-Point). 
- **Improved HDR support.**
- [Changelog](https://github.com/sblantipodi/firefly_luciferin/wiki/Luciferin-update-management) is now presented in WebView format and allows you to access the [Wiki](https://github.com/sblantipodi/firefly_luciferin/wiki) about new features.(This feature is visible from the next update because Firefly Luciferin needs to be updated first).
- Screen capture is restarted automatically once an MQTT disconnection/reconnection occurs. Closes [#162](https://github.com/sblantipodi/firefly_luciferin/issues/162). 
- Luciferin now defaults to the dark theme if your operating system is using a dark theme.
- There were misalignments in the screen capture zones on newer AMD graphics cards. Fixed.
- [Color temperature adjustments](https://github.com/sblantipodi/firefly_luciferin/wiki/Color-Temperature-and-White-Balance) produces a greenish tint on LED strips with a particular color order. Fixed.
- Firefly Luciferin icons vanishes after some seconds when using a dual monitor setu