@@ -4,7 +4,7 @@
   Firefly Luciferin, very fast Java Screen Capture software designed
   for Glow Worm Luciferin firmware.
 
-  Copyright © 2020 - 2023  Davide Perini  (https://github.com/sblantipodi)
+  Copyright © 2020 - 2024  Davide Perini  (https://github.com/sblantipodi)
 
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -48,7 +48,7 @@ public class DisplayManager {
     /**
      * Set and get Display info
      *
-     * @param gd graphics device
+     * @param gd   graphics device
      * @param mode display mode
      * @return display info
      */
@@ -140,8 +140,8 @@ public class DisplayManager {
     /**
      * Set and get Display info
      *
-     * @param screen data
-     * @param bounds screen bound
+     * @param screen       data
+     * @param bounds       screen bound
      * @param visualBounds visual
      * @return display info
      */
@@ -210,7 +210,7 @@ public class DisplayManager {
      * @return current display infos
      */
     public DisplayInfo getFirstInstanceDisplay() {
-        return getDisplayList().get(0);
+        return getDisplayList().getFirst();
     }
 
     /**
